--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="flexible-container">
         <div class="half-width">
             <h1>Stay Focused On</h1>
             <h2 class="olive-color">Mission 2022</h2>
@@ -28,6 +28,40 @@
         <div class="half-width"><img src="images/person/person-1.png" alt="">
         </div>
 
+    </section>
+    <section class="my-mission-area">
+        <h2 class="misson-area-title">My Mission On <span>2022</span></h2>
+        <div class="mission-container">
+            <div class="mission-card" style="background-color: darkcyan;">
+                <div class="mission-developing" id="my-mission">
+                    <div><img class="card-image" src="images/illustrators/illustrator-1.png" alt=""></div>
+                    <h2>Mission</h2>
+                    <p>Develop high quality and affordable web solutions that enable clients to establish presence
+                        online,
+                        increase profitability, and continually improve productivity. Create Always, Think All Ways.</p>
+                </div>
+            </div>
+            <div class="mission-card" style="background-color: cadetblue;">
+                <div>
+                    <div><img class="card-image"src="images/illustrators/illustrator-2.png" alt=""></div>
+                    <h2>Vission</h2>
+                    <p>Personal vision statements are a great way to identify your long-term career goals, help you
+                        
+                        </p>
+                </div>
+            </div>
+            <div class="mission-card" style="background-color: aqua;">
+                <div>
+                    <div><img class="card-image"src="images/illustrators/illustrator-3.png" alt=""></div>
+                    <h2>Goals</h2>
+                    <p>
+                        <p>Personal vision statements are a great way to identify your long-term career goals, help you
+                        
+                        </p>
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
