--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
+    <section class="my-life">
+       <div class="dream-life">
+        <h1>My Dream Life</h1>
+        <h2>The Goal Of My Life</h2>
+        <p>
+            Everybody dreams, some have a dream in their eyes, some have thousands of dreams, some have small dreams and some have big dreams too. Since childhood, we are fascinated by many things and weave thousands of dreams 
+        </p>
+        <div class="half-width">
+            <img src="images/person/greg-rakozy-oMpAz-DN-9I-unsplash.jpg" alt="">
+        </div>
+       </div> 
+    </section>
    
 
 </body>
