--- a/index.html
+++ b/index.html
@@ -89,18 +89,22 @@
         </div>
     </section>
     <section class="my-life">
-       <div class="dream-life">
-        <h1>My Dream Life</h1>
-        <h2>The Goal Of My Life</h2>
-        <p>
-            Everybody dreams, some have a dream in their eyes, some have thousands of dreams, some have small dreams and some have big dreams too. Since childhood, we are fascinated by many things and weave thousands of dreams 
-        </p>
-        <div class="half-width">
-            <img src="images/person/greg-rakozy-oMpAz-DN-9I-unsplash.jpg" alt="">
-        </div>
-       </div> 
+      
+        <div class="dream-life">
+            <h1>My Dream Life</h1>
+            <h2>The Goal Of My Life</h2>
+            <div class="first-life">
+                <p>
+                    Everybody dreams, some have a dream in their eyes, some have thousands of dreams, some have small dreams and some have big dreams too. Since childhood, we are fascinated by many things and weave thousands of dreams 
+                </p>
+                <p>
+                    Everybody dreams, some have a dream in their eyes, some have thousands of dreams, some have small dreams and some have big dreams too. Since childhood, we are fascinated by many things and weave thousands of dreams 
+                </p>
+            </div>
+       </div>
+        
     </section>
-   
+   <footer>Life Is Not Made By For Lose.</footer>
 
 </body>
 
