--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="half-width">
             <h1>Stay Focused On</h1>
             <h2 class="olive-color">Mission 2022</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <p>
+                A personal mission statement can help you identify your values and goals, defining what matters most to you professionally. It makes decision-making easier as well, as it clarifies whether the decisions you're making are in alignment with what you want for your life.
+            </p>
             <a class="link-button" href="www.facebook.com">Explore Now</a>
 
             <p>scroll down to explore more about us</p>
@@ -97,14 +97,17 @@
                 <p>
                     Everybody dreams, some have a dream in their eyes, some have thousands of dreams, some have small dreams and some have big dreams too. Since childhood, we are fascinated by many things and weave thousands of dreams 
                 </p>
-                <p>
-                    Everybody dreams, some have a dream in their eyes, some have thousands of dreams, some have small dreams and some have big dreams too. Since childhood, we are fascinated by many things and weave thousands of dreams 
-                </p>
+                <a  class="link link-button"target="blank"href="">Show Of You</a>
+                
             </div>
        </div>
         
     </section>
-   <footer>Life Is Not Made By For Lose.</footer>
+   <footer>
+       <p>
+        Life Is Not Made By For Lose. 
+       </p>
+   </footer>
 
 </body>
 
